--- a/app/src/main/res/layout/activity_manual_releases.xml
+++ b/app/src/main/res/layout/activity_manual_releases.xml
@@ -161,11 +161,11 @@
 
                     <View
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/_1sdp"
+                        android:layout_height="1dp"
                         android:layout_gravity="center"
                         android:layout_marginTop="@dimen/_10sdp"
                         android:layout_marginBottom="@dimen/_9sdp"
-                        android:background="@color/blue_light" />
+                        android:background="@color/primary_light_gray" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -217,11 +217,11 @@
                     </LinearLayout>
                     <View
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/_1sdp"
+                        android:layout_height="1dp"
                         android:layout_gravity="center"
                         android:layout_marginTop="@dimen/_10sdp"
                         android:layout_marginBottom="@dimen/_9sdp"
-                        android:background="@color/blue_light" />
+                        android:background="@color/primary_light_gray" />
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -272,11 +272,11 @@
                     </LinearLayout>
                     <View
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/_1sdp"
+                        android:layout_height="1dp"
                         android:layout_gravity="center"
                         android:layout_marginTop="@dimen/_10sdp"
                         android:layout_marginBottom="@dimen/_9sdp"
-                        android:background="@color/blue_light" />
+                        android:background="@color/primary_light_gray" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
