--- a/app/src/main/res/layout/add_note_layout.xml
+++ b/app/src/main/res/layout/add_note_layout.xml
@@ -48,7 +48,7 @@
                 android:background="@null"
                 android:autofillHints="creditCardSecurityCode"
                 android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
-                android:fontFamily="@font/opensans_semibold"
+                android:fontFamily="@font/opensans_regular"
                 android:gravity="top"
                 android:hint="Optional: Add Note (Maximum 120 characters)"
                 android:imeOptions="actionDone"
