--- a/app/src/main/res/layout/dialog_reserve_filter.xml
+++ b/app/src/main/res/layout/dialog_reserve_filter.xml
@@ -6,8 +6,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/filter_top_radius"
     android:orientation="vertical"
-    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
-    tools:context=".view.business.ReserveFilterActivity">
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar" >
 
     <View
         android:layout_width="@dimen/_43sdp"
