--- a/app/src/main/res/layout/reserve_recent_transactions.xml
+++ b/app/src/main/res/layout/reserve_recent_transactions.xml
@@ -10,11 +10,11 @@
         android:id="@+id/nameTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_alignParentStart="true"
         android:layout_marginStart="@dimen/_11sdp"
+        android:layout_marginTop="@dimen/_22sdp"
         android:fontFamily="@font/opensans_semibold"
-        android:text="Reserve Release"
+        android:text="@string/sale_order_customer_name"
         android:textColor="@color/primary_black"
         android:textSize="@dimen/_11ssp" />
 
@@ -22,36 +22,34 @@
         android:id="@+id/ammont_TV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="@dimen/_22sdp"
+        android:layout_marginEnd="@dimen/_11sdp"
         android:fontFamily="@font/opensans_bold"
-        android:text="20,000.00"
-        android:textColor="@color/xdark_gray"
+        android:text="-150.00"
+        android:textColor="@color/primary_black"
         android:textSize="@dimen/_12ssp" />
 
     <TextView
-        android:id="@+id/status_TV"
-        android:layout_width="@dimen/_67sdp"
-        android:layout_height="@dimen/_17sdp"
+        android:id="@+id/amountTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/nameTv"
         android:layout_marginStart="@dimen/_11sdp"
         android:layout_marginTop="@dimen/_7sdp"
-        android:background="@drawable/txn_completed_bg"
-        android:fontFamily="@font/opensans_bold"
-        android:gravity="center"
-        android:text="Open"
+        android:fontFamily="@font/opensans_semibold"
+        android:text="Amount: 3,224.00"
         android:textColor="@color/xdark_gray"
-        android:textSize="@dimen/_8ssp" />
+        android:textSize="@dimen/_11ssp" />
 
     <TextView
         android:id="@+id/dateTime_TV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/ammont_TV"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginTop="@dimen/_7sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_11sdp"
         android:fontFamily="@font/opensans_semibold"
         android:text="Release: 06/23/2021 @ 2:20am"
         android:textColor="@color/xdark_gray"
@@ -62,7 +60,7 @@
         android:layout_height="1dp"
         android:layout_below="@id/dateTime_TV"
         android:layout_marginStart="@dimen/_11sdp"
-        android:layout_marginTop="@dimen/_8sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_9sdp"
+        android:layout_marginEnd="@dimen/_11sdp"
         android:background="@color/vlight_gray" />
 </RelativeLayout>
