Bug fix customer 24/03/2022 Version 2

--- a/app/src/main/res/layout/selectedpaymentmethodlistitem.xml
+++ b/app/src/main/res/layout/selectedpaymentmethodlistitem.xml
@@ -139,7 +139,7 @@
                 android:fontFamily="@font/opensans_regular"
                 android:text="There’s a issue with your payment"
                 android:textColor="@color/error_red"
-                android:textSize="@dimen/_9sdp"></TextView>
+                android:textSize="@dimen/_10ssp"></TextView>
 
         </LinearLayout>
     </LinearLayout>
