--- a/app/src/main/res/layout/activity_payout_details_transaction_list.xml
+++ b/app/src/main/res/layout/activity_payout_details_transaction_list.xml
@@ -46,14 +46,14 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/paidTV"
+            android:id="@+id/payoutStatusTV"
             android:layout_width="@dimen/_68sdp"
             android:layout_height="@dimen/_17sdp"
             android:layout_marginStart="@dimen/_6sdp"
             android:background="@drawable/fill_grn_color_smallradius"
             android:fontFamily="@font/opensans_bold"
             android:gravity="center"
-            android:text="Paid"
+            android:text=""
             android:textColor="@color/active_green"
             android:textSize="@dimen/_7ssp" />
 
