--- a/app/src/main/res/layout/business_batch_payout_search.xml
+++ b/app/src/main/res/layout/business_batch_payout_search.xml
@@ -16,7 +16,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/payoutSentTextTV"
+                    android:id="@+id/payoutSentText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_6sdp"
@@ -46,19 +46,19 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/paidTV"
+                    android:id="@+id/payoutListState"
                     android:layout_width="@dimen/_68sdp"
                     android:layout_height="@dimen/_17sdp"
                     android:layout_marginStart="@dimen/_6sdp"
                     android:background="@drawable/fill_grn_color_smallradius"
                     android:fontFamily="@font/opensans_bold"
                     android:gravity="center"
-                    android:text="Paid"
+                    android:text=""
                     android:textColor="@color/active_green"
                     android:textSize="@dimen/_7ssp" />
 
                 <TextView
-                    android:id="@+id/payoutDateTV"
+                    android:id="@+id/payoutDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_6sdp"
