--- a/app/src/main/res/layout/activity_business_additional_action_documents_items.xml
+++ b/app/src/main/res/layout/activity_business_additional_action_documents_items.xml
@@ -19,7 +19,7 @@
             <LinearLayout
                 android:id="@+id/documentRequired"
                 android:layout_width="match_parent"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:padding="@dimen/_10sdp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -31,7 +31,7 @@
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:fontFamily="@font/opensans_semibold"
                     android:layout_marginStart="@dimen/_5sdp"
-                    android:text="Test"
+                    android:text=""
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_11ssp" />
 
@@ -104,7 +104,6 @@
                             android:layout_marginEnd="@dimen/_10sdp"
                             android:gravity="right"
                             android:src="@drawable/ic_complete"
-
                             />
 
                     </LinearLayout>
@@ -325,7 +324,7 @@
                             android:layout_marginEnd="@dimen/_11sdp"
                             android:layout_marginBottom="@dimen/_16sdp"
                             android:fontFamily="@font/opensans_regular"
-                            android:text="@string/lorem_ipsum_dolor_sit_amet_consectetuer_adipiscing_elit_aenean_commodo_ligula_eget_dolor_aenean_massa"
+                            android:text=""
                             android:textColor="@color/dark_grey"
                             android:textSize="@dimen/_10ssp" />
 
@@ -365,8 +364,8 @@
                                 android:id="@+id/acceptLL"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginStart="@dimen/_8sdp"
-                                android:layout_marginEnd="@dimen/_12sdp"
+                                android:layout_marginStart="@dimen/_3sdp"
+                                android:layout_marginEnd="@dimen/_2sdp"
                                 android:layout_weight="1"
                                 android:background="@drawable/shape_green_round_rect"
                                 android:orientation="vertical"
