--- a/app/src/main/res/layout/activity_buy_token.xml
+++ b/app/src/main/res/layout/activity_buy_token.xml
@@ -282,10 +282,11 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/opensans_bold"
                                 android:text="$ "
+                                android:layout_marginTop="@dimen/_6sdp"
                                 android:layout_gravity="top"
                                 android:textColor="@color/primary_black"
-                                android:textSize="@dimen/_20sdp"
-                                android:visibility="gone" />
+                                android:textSize="@dimen/_30ssp"
+                                android:visibility="visible" />
 
                             <LinearLayout
                                 android:id="@+id/lyAmount"
@@ -320,7 +321,7 @@
                                     android:text=" CYN"
                                     android:textColor="@color/primary_black"
                                     android:textSize="@dimen/_12ssp"
-                                    android:visibility="visible"></TextView>
+                                    android:visibility="gone"></TextView>
 
                             </LinearLayout>
 
