--- a/app/src/main/res/layout/activity_withdraw_token.xml
+++ b/app/src/main/res/layout/activity_withdraw_token.xml
@@ -211,9 +211,10 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/opensans_bold"
                                 android:text="$ "
+                                android:layout_marginTop="@dimen/_6sdp"
                                 android:layout_gravity="top"
                                 android:textColor="@color/primary_black"
-                                android:textSize="@dimen/_20sdp"
+                                android:textSize="@dimen/_30ssp"
                                 android:visibility="gone" />
 
                             <LinearLayout
