--- a/app/src/main/res/layout/activity_business_sales_order.xml
+++ b/app/src/main/res/layout/activity_business_sales_order.xml
@@ -393,7 +393,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:src="@drawable/ic_close" />
+                            android:src="@drawable/refund_ic" />
 
                         <TextView
                             android:layout_width="match_parent"
