--- a/app/src/main/res/layout/activity_add_recipient.xml
+++ b/app/src/main/res/layout/activity_add_recipient.xml
@@ -77,7 +77,6 @@
                         android:layout_marginStart="@dimen/_8sdp"
                         android:layout_marginEnd="@dimen/_5sdp"
                         android:layout_weight="1"
-                        android:text=""
                         android:background="@android:color/transparent"
                         android:cursorVisible="true"
                         android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789- "
@@ -86,6 +85,7 @@
                         android:maxLength="60"
                         android:maxLines="1"
                         android:singleLine="true"
+                        android:text=""
                         android:textColor="@color/primary_black"
                         android:textColorHint="@color/dark_grey"
                         android:textCursorDrawable="@drawable/cursor_color"
@@ -190,7 +190,7 @@
                     android:text="You can invite your friends from your contacts"
                     android:textColor="@color/dark_grey"
                     android:textSize="@dimen/_9ssp"
-                    android:visibility="gone"></TextView>
+                    android:visibility="visible"></TextView>
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
@@ -204,6 +204,7 @@
                         android:id="@+id/rvContacts"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:visibility="visible"
                         android:layout_marginTop="@dimen/_7sdp"></androidx.recyclerview.widget.RecyclerView>
 
                     <TextView
@@ -215,7 +216,8 @@
                         android:text="You have no contacts"
                         android:textColor="@color/light_gray"
                         android:textSize="@dimen/_9ssp"
-                        android:visibility="gone"></TextView>
+                        android:visibility="gone"
+                        android:paddingVertical="@dimen/_50sdp"></TextView>
                 </androidx.cardview.widget.CardView>
 
             </LinearLayout>
