--- a/app/src/main/res/layout/activity_leran_more.xml
+++ b/app/src/main/res/layout/activity_leran_more.xml
@@ -42,7 +42,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/_19sdp"
                 android:fontFamily="@font/opensans_regular"
-                android:text="When you send or receive money from a source \noutside the coyni environment, it can take up to \na few minutes to complete those requests. \nTransactions made within the coyni environment \n(token to token transactions) happen instantly.  \nHere is some information on specific transaction \ntypes that you might encounter:"
+                android:text="When you send or receive money from a source outside the coyni environment, it can take up to a few minutes to complete those requests. Transactions made within the coyni environment (token to token transactions) happen instantly.  Here is some information on specific transaction types that you might encounter:"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_11ssp" />
 
@@ -109,7 +109,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/_20sdp"
                     android:fontFamily="@font/opensans_regular"
-                    android:text="Pay bank account uses your debit card to \nfacilitate the process. This typically takes about \n30 seconds to process, but can take up to 30 \nminutes depending on your bank. Most, but not \nall banks support Instant Pay."
+                    android:text="Pay bank account uses your debit card to facilitate the process. This typically takes about 30 seconds to process, but can take up to 30 minutes depending on your bank. Most, but not all banks support Instant Pay."
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_11ssp" />
 
@@ -139,7 +139,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_regular"
-                    android:text="coyni tokens typically takes about 1 minute to \nprocess the request and to send out the email\nthat contains the gift card."
+                    android:text="coyni tokens typically takes about 1 minute to process the request and to send out the email that contains the gift card."
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_11ssp" />
             </LinearLayout>
