--- a/app/src/main/res/layout/activity_pay_to_personal.xml
+++ b/app/src/main/res/layout/activity_pay_to_personal.xml
@@ -172,7 +172,7 @@
                                 android:orientation="horizontal">
 
                                 <TextView
-                                    android:id="@+id/etAmount"
+                                    android:id="@+id/tvAmount"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:background="@color/white"
