--- a/app/src/main/res/layout/buy_token_transaction_pending.xml
+++ b/app/src/main/res/layout/buy_token_transaction_pending.xml
@@ -162,7 +162,7 @@
                         android:textSize="@dimen/_10sdp" />
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="left"
