--- a/app/src/main/res/layout/edit_card_number_layout.xml
+++ b/app/src/main/res/layout/edit_card_number_layout.xml
@@ -74,22 +74,47 @@
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/hintTV"
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
-        android:background="@android:color/white"
-        android:fontFamily="@font/opensans_semibold"
-        android:paddingStart="4dp"
-        android:paddingEnd="4dp"
-        android:text="Card Number"
-        android:textColor="@color/primary_black"
-        android:textSize="@dimen/text_size_11sp"
-        android:visibility="gone"
+
         app:layout_constraintBottom_toTopOf="@+id/hintdHolderLL"
         app:layout_constraintStart_toStartOf="@+id/hintdHolderLL"
-        app:layout_constraintTop_toTopOf="@+id/hintdHolderLL" />
+        app:layout_constraintTop_toTopOf="@+id/hintdHolderLL">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/card_edit_back_gradient">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/opensans_semibold"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
+                android:text="Card Number"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/text_size_11sp"
+                android:visibility="invisible" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/hintTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:fontFamily="@font/opensans_semibold"
+            android:paddingStart="4dp"
+            android:paddingEnd="4dp"
+            android:text="Card Number"
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/text_size_11sp"
+            android:visibility="visible" />
+    </RelativeLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
