--- a/app/src/main/res/layout/activity_business_personal_accounts.xml
+++ b/app/src/main/res/layout/activity_business_personal_accounts.xml
@@ -131,37 +131,35 @@
         </LinearLayout>
     </LinearLayout>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<!--    <ScrollView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent">-->
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_10ssp"
             android:layout_marginBottom="@dimen/_10ssp"
-            android:background="@drawable/fullradius_list_items"
             android:orientation="vertical">
 
             <ExpandableListView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_250sdp"
-                android:layout_marginTop="@dimen/_15sdp"
-                android:layout_marginBottom="@dimen/_15sdp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_5sdp"
                 android:divider="@null"
                 android:groupIndicator="@null"
-                android:visibility="gone"
+                android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
-
 
             <LinearLayout
                 android:id="@+id/profileLL"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
+                android:layout_marginTop="@dimen/_10ssp"
                 android:gravity="center"
                 android:visibility="gone"
                 android:orientation="horizontal">
@@ -259,8 +257,9 @@
 
 
             </LinearLayout>
+
         </LinearLayout>
 
-    </ScrollView>
+<!--    </ScrollView>-->
 
 </LinearLayout>
