--- a/app/src/main/res/layout/business_profile_accounts_item.xml
+++ b/app/src/main/res/layout/business_profile_accounts_item.xml
@@ -1,71 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/ll_open_account"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/profileLL"
+    android:background="@color/white"
+    android:orientation="horizontal"
+    android:visibility="visible">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/profile_account_profile_image"
-        android:layout_width="@dimen/_35sdp"
-        android:layout_height="@dimen/_35sdp"
-        android:layout_alignParentRight="true"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/_10ssp"
-        android:layout_marginBottom="@dimen/_25sdp"
-        android:layout_marginStart="@dimen/_10ssp"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="@dimen/_18sdp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/title"
-        app:layout_constraintTop_toTopOf="parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="@dimen/_11sdp"
+        android:layout_marginStart="@dimen/_20sdp"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/profile_img"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:contentDescription="@string/businessProfileAccountItemImage"
-            android:scaleType="fitXY"
-            android:src="@color/light_gray"
-            android:visibility="visible" />
+            android:layout_width="@dimen/_35sdp"
+            android:layout_height="@dimen/_35sdp"
+            android:src="@drawable/ic_add_circle" />
 
-<!--        <TextView-->
-<!--            android:id="@+id/b_imageTextTV"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:fontFamily="@font/opensans_bold"-->
-<!--            android:textColor="@color/primary_black"-->
-<!--            android:textSize="@dimen/_20sdp"-->
-<!--            android:visibility="gone" />-->
-    </androidx.cardview.widget.CardView>
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="0dp"
+            android:layout_weight="0.3"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_60sdp"
+            android:fontFamily="@font/opensans_semibold"
+            android:padding="@dimen/_10sdp"
+            android:text=""
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_11ssp"
+            app:layout_constraintBottom_toBottomOf="@id/profile_account_profile_image"
+            app:layout_constraintEnd_toEndOf="@+id/arrowImg"
+            app:layout_constraintStart_toEndOf="@id/profile_account_profile_image"
+            app:layout_constraintTop_toTopOf="@id/profile_account_profile_image" />
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="0dp"
-        android:text=""
-        android:fontFamily="@font/opensans_semibold"
-        android:layout_height="wrap_content"
-        android:textColor="@color/primary_black"
-        android:padding="@dimen/_10sdp"
-        android:textSize="@dimen/_11ssp"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
-        app:layout_constraintStart_toEndOf="@id/profile_account_profile_image"
-        app:layout_constraintBottom_toBottomOf="@id/profile_account_profile_image"
-        app:layout_constraintEnd_toEndOf="@+id/arrowImg"
-        app:layout_constraintTop_toTopOf="@id/profile_account_profile_image"/>
+        <ImageView
+            android:id="@+id/arrowImg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_10ssp"
+            android:layout_marginEnd="@dimen/_16sdp"
+            android:contentDescription="@string/businessProfileAccountExpandDownArrow"
+            android:src="@drawable/ic_down"
+            app:layout_constraintBottom_toBottomOf="@id/title"
+            app:layout_constraintEnd_toEndOf="@id/title"
+            app:layout_constraintStart_toEndOf="@id/title"
+            app:layout_constraintTop_toTopOf="@id/title" />
 
-    <ImageView
-        android:id="@+id/arrowImg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/_16sdp"
-        android:layout_marginTop="@dimen/_10ssp"
-        android:contentDescription="@string/businessProfileAccountExpandDownArrow"
-        android:src="@drawable/ic_down"
-        app:layout_constraintStart_toEndOf="@id/title"
-        app:layout_constraintBottom_toBottomOf="@id/title"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/title" />
+    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
+
+    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--    android:layout_width="match_parent"-->
+    <!--    android:background="@color/white"-->
+    <!--    android:layout_height="wrap_content">-->
+
+    <!--    <androidx.cardview.widget.CardView-->
+    <!--        android:id="@+id/profile_account_profile_image"-->
+    <!--        android:layout_width="@dimen/_35sdp"-->
+    <!--        android:layout_height="@dimen/_35sdp"-->
+    <!--        android:layout_alignParentRight="true"-->
+    <!--        android:layout_gravity="center"-->
+    <!--        android:layout_marginTop="@dimen/_10ssp"-->
+    <!--        android:layout_marginBottom="@dimen/_25sdp"-->
+    <!--        android:layout_marginStart="@dimen/_10ssp"-->
+    <!--        app:cardBackgroundColor="@color/white"-->
+    <!--        app:cardCornerRadius="@dimen/_18sdp"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintStart_toEndOf="@+id/title"-->
+    <!--        app:layout_constraintTop_toTopOf="parent">-->
+
+    <!--        <ImageView-->
+    <!--            android:id="@+id/profile_img"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="match_parent"-->
+    <!--            android:contentDescription="@string/businessProfileAccountItemImage"-->
+    <!--            android:scaleType="fitXY"-->
+    <!--            android:src="@color/light_gray"-->
+    <!--            android:visibility="visible" />-->
+
+    <!--&lt;!&ndash;        <TextView&ndash;&gt;-->
+    <!--&lt;!&ndash;            android:id="@+id/b_imageTextTV"&ndash;&gt;-->
+    <!--&lt;!&ndash;            android:layout_width="wrap_content"&ndash;&gt;-->
+    <!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
+    <!--&lt;!&ndash;            android:layout_gravity="center"&ndash;&gt;-->
+    <!--&lt;!&ndash;            android:fontFamily="@font/opensans_bold"&ndash;&gt;-->
+    <!--&lt;!&ndash;            android:textColor="@color/primary_black"&ndash;&gt;-->
+    <!--&lt;!&ndash;            android:textSize="@dimen/_20sdp"&ndash;&gt;-->
+    <!--&lt;!&ndash;            android:visibility="gone" />&ndash;&gt;-->
+    <!--    </androidx.cardview.widget.CardView>-->
+
+    <!--    <TextView-->
+    <!--        android:id="@+id/title"-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:text=""-->
+    <!--        android:fontFamily="@font/opensans_semibold"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:textColor="@color/primary_black"-->
+    <!--        android:padding="@dimen/_10sdp"-->
+    <!--        android:textSize="@dimen/_11ssp"-->
+    <!--        android:layout_marginStart="@dimen/_10sdp"-->
+    <!--        android:layout_marginEnd="@dimen/_10sdp"-->
+    <!--        app:layout_constraintStart_toEndOf="@id/profile_account_profile_image"-->
+    <!--        app:layout_constraintBottom_toBottomOf="@id/profile_account_profile_image"-->
+    <!--        app:layout_constraintEnd_toEndOf="@+id/arrowImg"-->
+    <!--        app:layout_constraintTop_toTopOf="@id/profile_account_profile_image"/>-->
+
+    <!--    <ImageView-->
+    <!--        android:id="@+id/arrowImg"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginEnd="@dimen/_16sdp"-->
+    <!--        android:layout_marginTop="@dimen/_10ssp"-->
+    <!--        android:contentDescription="@string/businessProfileAccountExpandDownArrow"-->
+    <!--        android:src="@drawable/ic_down"-->
+    <!--        app:layout_constraintStart_toEndOf="@id/title"-->
+    <!--        app:layout_constraintBottom_toBottomOf="@id/title"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintTop_toTopOf="@id/title" />-->
+
+
+    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
