--- a/app/src/main/res/layout/business_profile_accounts_item_child.xml
+++ b/app/src/main/res/layout/business_profile_accounts_item_child.xml
@@ -3,7 +3,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/_120sdp">
+    android:background="@color/white"
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/profile_account_profile_image"
