--- a/app/src/main/res/layout/activity_pay_to_personal.xml
+++ b/app/src/main/res/layout/activity_pay_to_personal.xml
@@ -161,7 +161,7 @@
                             android:text="$ "
                             android:layout_marginTop="@dimen/_6sdp"
                             android:layout_gravity="top"
-                            android:textColor="@color/primary_black"
+                            android:textColor="@color/primary_green"
                             android:textSize="@dimen/_30ssp"
                             android:visibility="gone" />
 
@@ -182,7 +182,7 @@
                                     android:hint="0.00"
                                     android:inputType="numberDecimal"
                                     android:maxLength="@string/maxlength"
-                                    android:textColor="@color/primary_black"
+                                    android:textColor="@color/primary_green"
                                     android:textColorHint="@color/light_gray"
                                     android:cursorVisible="true"
                                     android:textCursorDrawable="@drawable/cursor_green"
@@ -194,7 +194,7 @@
                                     android:layout_height="wrap_content"
                                     android:fontFamily="@font/opensans_bold"
                                     android:text=" CYN"
-                                    android:textColor="@color/primary_black"
+                                    android:textColor="@color/primary_green"
                                     android:textSize="@dimen/_12ssp"
                                     android:visibility="visible"></TextView>
                             </LinearLayout>
