--- a/app/src/main/res/layout/activity_business_batch_payout_id_details.xml
+++ b/app/src/main/res/layout/activity_business_batch_payout_id_details.xml
@@ -75,7 +75,7 @@
                         android:textSize="@dimen/_12ssp" />
 
                     <TextView
-                        android:id="@+id/idTV"
+                        android:id="@+id/bathPayoutIdTV"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_3sdp"
@@ -86,7 +86,7 @@
                         android:textSize="@dimen/_11ssp" />
 
                     <TextView
-                        android:id="@+id/cynNoTV"
+                        android:id="@+id/payoutIDAmountTV"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_11sdp"
@@ -124,6 +124,7 @@
 
 
                         <TextView
+                            android:id="@+id/payoutStatusTV"
                             android:layout_width="@dimen/_68sdp"
                             android:layout_height="@dimen/_14sdp"
                             android:background="@drawable/txn_completed_bg"
@@ -154,7 +155,7 @@
                             android:textSize="@dimen/_11ssp" />
 
                         <TextView
-                            android:id="@+id/dateTimeTV"
+                            android:id="@+id/payoutIDdateTimeTV"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_semibold"
@@ -300,6 +301,7 @@
                 android:layout_marginHorizontal="@dimen/_11sdp">
 
                 <TextView
+                    android:id="@+id/recentTransactionsTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_11sdp"
@@ -330,20 +332,94 @@
                 android:layout_marginTop="@dimen/_6sdp"
                 app:cardCornerRadius="@dimen/_10sdp">
 
-                <LinearLayout
+                <androidx.core.widget.NestedScrollView
+                    android:id="@+id/nestedSV"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/_11sdp"
-                    android:layout_marginTop="@dimen/_8sdp"
-                    android:orientation="vertical">
+                    android:layout_height="match_parent">
 
-                    <androidx.recyclerview.widget.RecyclerView
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
 
-                    </androidx.recyclerview.widget.RecyclerView>
+                        <TextView
+                            android:id="@+id/pendingTV"
+                            android:layout_width="match_parent"
+                            android:layout_height="27dp"
+                            android:layout_marginTop="@dimen/_14sdp"
+                            android:background="#f2f4f5"
+                            android:fontFamily="@font/opensans_bold"
+                            android:gravity="center_vertical"
+                            android:paddingLeft="15dp"
+                            android:text="Pending"
+                            android:textColor="@color/primary_black"
+                            android:textSize="@dimen/text_size_14sp"
+                            android:visibility="gone" />
 
-                </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/layoutLLPending"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_10sdp"
+                            android:orientation="vertical"
+                            android:visibility="gone">
+
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="@dimen/_2sdp"
+                                app:cardCornerRadius="@dimen/_10sdp">
+
+                                <com.greenbox.coyni.utils.ExpandableHeightRecyclerView
+                                    android:id="@+id/transactionListPendingRV"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="10dp"
+                                    android:clipToPadding="false"
+                                    android:divider="@color/white"
+                                    android:nestedScrollingEnabled="false"
+                                    android:overScrollMode="never"
+                                    android:scrollbars="none" />
+                            </androidx.cardview.widget.CardView>
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/layoutLLposted"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginTop="@dimen/_11sdp"
+                            android:orientation="vertical"
+                            android:visibility="visible">
+
+
+                            <com.greenbox.coyni.utils.ExpandableHeightRecyclerView
+                                android:id="@+id/transactionListPostedRV"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:clipToPadding="false"
+                                android:nestedScrollingEnabled="false"
+                                android:overScrollMode="never"
+                                android:scrollbars="none" />
+                        </LinearLayout>
+
+                        <TextView
+                            android:id="@+id/noTransactions"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:fontFamily="@font/opensans_regular"
+                            android:gravity="center"
+                            android:text="You have no transactions"
+                            android:textColor="@color/dark_grey"
+                            android:textSize="@dimen/_10ssp"
+                            android:visibility="gone" />
+
+                        <ProgressBar
+                            android:id="@+id/progressBarLoadMore"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
+                </androidx.core.widget.NestedScrollView>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
     </ScrollView>
