--- a/app/src/main/res/layout/activity_business_batch_payout_search.xml
+++ b/app/src/main/res/layout/activity_business_batch_payout_search.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f2f4f5"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -67,13 +67,13 @@
                         android:layout_marginEnd="@dimen/_5sdp"
                         android:layout_weight="1"
                         android:autofillHints="emailAddress"
-                        android:inputType="textVisiblePassword"
                         android:background="@android:color/transparent"
                         android:cursorVisible="true"
                         android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
                         android:fontFamily="@font/opensans_regular"
                         android:hint="Payout ID"
                         android:imeOptions="actionDone"
+                        android:inputType="textVisiblePassword"
                         android:maxLength="35"
                         android:maxLines="1"
                         android:singleLine="true"
@@ -98,7 +98,6 @@
                         android:contentDescription="@string/filter_button"
                         android:src="@drawable/ic_filtericon" />
                 </LinearLayout>
-
 
 
             </LinearLayout>
@@ -131,33 +130,82 @@
             android:textSize="@dimen/_11ssp" />
     </LinearLayout>
 
-    <androidx.cardview.widget.CardView
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/payoutRefreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/_11sdp"
-        android:layout_marginTop="@dimen/_6sdp"
-        app:cardCornerRadius="@dimen/_10sdp">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/_11sdp"
-            android:layout_marginTop="@dimen/_8sdp"
             android:orientation="vertical">
 
-            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-                android:id="@+id/refreshpageSL"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/_11sdp"
+                android:layout_marginTop="@dimen/_6sdp"
+                app:cardCornerRadius="@dimen/_10sdp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_margin="@dimen/_6sdp">
 
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerViewPayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/payoutRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-            </androidx.recyclerview.widget.RecyclerView>
-            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+                </androidx.recyclerview.widget.RecyclerView>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/payoutNoTransactions"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fontFamily="@font/opensans_regular"
+            android:gravity="center"
+            android:text="You have no transactions"
+            android:textColor="@color/dark_grey"
+            android:textSize="@dimen/_10ssp"
+            android:visibility="gone" />
+
+        <ProgressBar
+            android:id="@+id/payoutProgressBarLoadMore"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/payoutLoadMoreTV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_12sdp"
+            android:fontFamily="@font/opensans_regular"
+            android:gravity="center"
+            android:text="Load More"
+            android:textColor="@color/primary_green"
+            android:textSize="@dimen/_10ssp"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/payoutNoMoreTransactions"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/_12sdp"
+            android:fontFamily="@font/opensans_regular"
+            android:gravity="center"
+            android:text="You have no more transactions"
+            android:textColor="@color/dark_grey"
+            android:textSize="@dimen/_10ssp"
+            android:visibility="gone" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_30sdp" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </LinearLayout>
