--- a/app/src/main/res/drawable/corner_radius_forqr.xml
+++ b/app/src/main/res/drawable/corner_radius_forqr.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="@dimen/_24sdp" />
-            <stroke android:width="@dimen/_7sdp" android:color="#009c98" />
+            <corners android:radius="@dimen/_20sdp" />
+            <stroke android:width="@dimen/_7sdp" android:color="#D8E2F0" />
         </shape>
     </item>
 </selector>
