--- a/app/src/main/res/layout/activity_withdraw_token.xml
+++ b/app/src/main/res/layout/activity_withdraw_token.xml
@@ -3,13 +3,50 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f2f4f5">
+    android:background="#f2f4f5"
+    android:fillViewport="true">
+
+    <LinearLayout
+        android:id="@+id/headerLL"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/backgrndbtmcornrs"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/_21sdp"
+        android:paddingTop="@dimen/_40sdp"
+        android:paddingRight="@dimen/_21sdp">
+
+        <LinearLayout
+            android:id="@+id/lyWithdrawClose"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:src="@drawable/ic_back" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_14sdp"
+            android:layout_marginBottom="@dimen/_11sdp"
+            android:fontFamily="@font/opensans_bold"
+            android:text="Withdraw Token"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_16ssp" />
+    </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/lyBottom"
-        android:fillViewport="true"
+        android:layout_below="@+id/headerLL"
         android:scrollbars="none">
 
         <LinearLayout
@@ -17,39 +54,39 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/backgrndbtmcornrs"
-                android:orientation="vertical"
-                android:paddingLeft="@dimen/_21sdp"
-                android:paddingTop="@dimen/_40sdp"
-                android:paddingRight="@dimen/_21sdp">
+            <!--            <LinearLayout-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:background="@drawable/backgrndbtmcornrs"-->
+            <!--                android:orientation="vertical"-->
+            <!--                android:paddingLeft="@dimen/_21sdp"-->
+            <!--                android:paddingTop="@dimen/_40sdp"-->
+            <!--                android:paddingRight="@dimen/_21sdp">-->
 
-                <LinearLayout
-                    android:id="@+id/lyWithdrawClose"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
+            <!--                <LinearLayout-->
+            <!--                    android:id="@+id/lyWithdrawClose"-->
+            <!--                    android:layout_width="30dp"-->
+            <!--                    android:layout_height="30dp"-->
+            <!--                    android:gravity="center_vertical"-->
+            <!--                    android:orientation="horizontal">-->
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@color/white"
-                        android:src="@drawable/ic_back" />
-                </LinearLayout>
+            <!--                    <ImageView-->
+            <!--                        android:layout_width="wrap_content"-->
+            <!--                        android:layout_height="wrap_content"-->
+            <!--                        android:background="@color/white"-->
+            <!--                        android:src="@drawable/ic_back" />-->
+            <!--                </LinearLayout>-->
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_14sdp"
-                    android:layout_marginBottom="@dimen/_11sdp"
-                    android:fontFamily="@font/opensans_bold"
-                    android:text="Withdraw Token"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_16ssp" />
-            </LinearLayout>
+            <!--                <TextView-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:layout_marginTop="@dimen/_14sdp"-->
+            <!--                    android:layout_marginBottom="@dimen/_11sdp"-->
+            <!--                    android:fontFamily="@font/opensans_bold"-->
+            <!--                    android:text="Withdraw Token"-->
+            <!--                    android:textColor="@color/black"-->
+            <!--                    android:textSize="@dimen/_16ssp" />-->
+            <!--            </LinearLayout>-->
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -192,27 +229,27 @@
                     <RelativeLayout
                         android:id="@+id/payLL"
                         android:layout_width="match_parent"
-                        android:layout_marginTop="@dimen/_13ssp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
+                        android:layout_marginTop="@dimen/_13ssp"
                         android:gravity="center_vertical"
                         android:orientation="horizontal">
 
                         <LinearLayout
                             android:id="@+id/lyamountview1"
                             android:layout_width="match_parent"
-                            android:gravity="center"
                             android:layout_height="wrap_content"
+                            android:gravity="center"
                             android:orientation="horizontal">
 
                             <TextView
                                 android:id="@+id/tvCurrency"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_gravity="top"
+                                android:layout_marginTop="@dimen/_6sdp"
                                 android:fontFamily="@font/opensans_bold"
                                 android:text="$ "
-                                android:layout_marginTop="@dimen/_6sdp"
-                                android:layout_gravity="top"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_30ssp"
                                 android:visibility="gone" />
@@ -229,6 +266,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:background="@color/white"
+                                    android:cursorVisible="true"
                                     android:fontFamily="@font/opensans_bold"
                                     android:gravity="center_vertical|right"
                                     android:hint="0.00"
@@ -236,7 +274,6 @@
                                     android:maxLength="@string/maxlength"
                                     android:textColor="@color/primary_black"
                                     android:textColorHint="@color/light_gray"
-                                    android:cursorVisible="true"
                                     android:textCursorDrawable="@drawable/cursorcolor"
                                     android:textSize="@dimen/_53ssp" />
 
@@ -256,83 +293,83 @@
                                 android:id="@+id/imgConvert"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_gravity="bottom"
                                 android:layout_marginStart="@dimen/_10ssp"
                                 android:layout_marginBottom="@dimen/_14ssp"
-                                android:layout_gravity="bottom"
                                 android:src="@drawable/ic_download" />
 
                         </LinearLayout>
 
                     </RelativeLayout>
 
-<!--                    <LinearLayout-->
-<!--                        android:id="@+id/linearLayoutnew"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="@dimen/_60sdp"-->
-<!--                        android:layout_margin="@dimen/_10ssp"-->
-<!--                        android:gravity="center"-->
-<!--                        android:orientation="vertical">-->
+                    <!--                    <LinearLayout-->
+                    <!--                        android:id="@+id/linearLayoutnew"-->
+                    <!--                        android:layout_width="match_parent"-->
+                    <!--                        android:layout_height="@dimen/_60sdp"-->
+                    <!--                        android:layout_margin="@dimen/_10ssp"-->
+                    <!--                        android:gravity="center"-->
+                    <!--                        android:orientation="vertical">-->
 
-<!--                        <LinearLayout-->
-<!--                            android:layout_width="match_parent"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:id="@+id/ll_values"-->
-<!--                            android:gravity="center_horizontal"-->
-<!--                            android:layout_gravity="center_vertical"-->
-<!--                            android:orientation="horizontal">-->
+                    <!--                        <LinearLayout-->
+                    <!--                            android:layout_width="match_parent"-->
+                    <!--                            android:layout_height="wrap_content"-->
+                    <!--                            android:id="@+id/ll_values"-->
+                    <!--                            android:gravity="center_horizontal"-->
+                    <!--                            android:layout_gravity="center_vertical"-->
+                    <!--                            android:orientation="horizontal">-->
 
-<!--                            <TextView-->
-<!--                                android:id="@+id/tvCurrency"-->
-<!--                                android:layout_width="wrap_content"-->
-<!--                                android:layout_height="wrap_content"-->
-<!--                                android:layout_gravity="top"-->
-<!--                                android:layout_marginEnd="@dimen/_5sdp"-->
-<!--                                android:fontFamily="@font/opensans_bold"-->
-<!--                                android:text="$"-->
-<!--                                android:textColor="@color/primary_black"-->
-<!--                                android:textSize="@dimen/_15ssp"-->
-<!--                                android:visibility="gone" />-->
+                    <!--                            <TextView-->
+                    <!--                                android:id="@+id/tvCurrency"-->
+                    <!--                                android:layout_width="wrap_content"-->
+                    <!--                                android:layout_height="wrap_content"-->
+                    <!--                                android:layout_gravity="top"-->
+                    <!--                                android:layout_marginEnd="@dimen/_5sdp"-->
+                    <!--                                android:fontFamily="@font/opensans_bold"-->
+                    <!--                                android:text="$"-->
+                    <!--                                android:textColor="@color/primary_black"-->
+                    <!--                                android:textSize="@dimen/_15ssp"-->
+                    <!--                                android:visibility="gone" />-->
 
-<!--                            <EditText-->
-<!--                                android:id="@+id/etAmount"-->
-<!--                                android:layout_width="wrap_content"-->
-<!--                                android:layout_height="wrap_content"-->
-<!--                                android:layout_gravity="center_vertical"-->
-<!--                                android:background="@color/white"-->
-<!--                                android:fontFamily="@font/opensans_bold"-->
-<!--                                android:gravity="center_vertical"-->
-<!--                                android:hint="0.00"-->
-<!--                                android:inputType="numberDecimal"-->
-<!--                                android:maxLength="@string/maxlengthamount"-->
-<!--                                android:textColor="@color/primary_black"-->
-<!--                                android:textColorHint="@color/light_gray"-->
-<!--                                android:textCursorDrawable="@drawable/cursorcolor"-->
-<!--                                android:textSize="@dimen/_53sdp" />-->
+                    <!--                            <EditText-->
+                    <!--                                android:id="@+id/etAmount"-->
+                    <!--                                android:layout_width="wrap_content"-->
+                    <!--                                android:layout_height="wrap_content"-->
+                    <!--                                android:layout_gravity="center_vertical"-->
+                    <!--                                android:background="@color/white"-->
+                    <!--                                android:fontFamily="@font/opensans_bold"-->
+                    <!--                                android:gravity="center_vertical"-->
+                    <!--                                android:hint="0.00"-->
+                    <!--                                android:inputType="numberDecimal"-->
+                    <!--                                android:maxLength="@string/maxlengthamount"-->
+                    <!--                                android:textColor="@color/primary_black"-->
+                    <!--                                android:textColorHint="@color/light_gray"-->
+                    <!--                                android:textCursorDrawable="@drawable/cursorcolor"-->
+                    <!--                                android:textSize="@dimen/_53sdp" />-->
 
-<!--                            <TextView-->
-<!--                                android:id="@+id/tvCYN"-->
-<!--                                android:layout_width="wrap_content"-->
-<!--                                android:layout_height="wrap_content"-->
-<!--                                android:layout_gravity="bottom"-->
-<!--                                android:fontFamily="@font/opensans_bold"-->
-<!--                                android:text=" CYN"-->
-<!--                                android:textColor="@color/primary_black"-->
-<!--                                android:textSize="@dimen/_12ssp"-->
-<!--                                android:visibility="visible">-->
+                    <!--                            <TextView-->
+                    <!--                                android:id="@+id/tvCYN"-->
+                    <!--                                android:layout_width="wrap_content"-->
+                    <!--                                android:layout_height="wrap_content"-->
+                    <!--                                android:layout_gravity="bottom"-->
+                    <!--                                android:fontFamily="@font/opensans_bold"-->
+                    <!--                                android:text=" CYN"-->
+                    <!--                                android:textColor="@color/primary_black"-->
+                    <!--                                android:textSize="@dimen/_12ssp"-->
+                    <!--                                android:visibility="visible">-->
 
-<!--                            </TextView>-->
+                    <!--                            </TextView>-->
 
-<!--                            <ImageView-->
-<!--                                android:id="@+id/imgConvert"-->
-<!--                                android:layout_width="wrap_content"-->
-<!--                                android:layout_height="wrap_content"-->
-<!--                                android:layout_gravity="bottom"-->
-<!--                                android:layout_marginStart="@dimen/_5sdp"-->
-<!--                                android:layout_marginBottom="@dimen/_5sdp"-->
-<!--                                android:src="@drawable/ic_download" />-->
-<!--                        </LinearLayout>-->
+                    <!--                            <ImageView-->
+                    <!--                                android:id="@+id/imgConvert"-->
+                    <!--                                android:layout_width="wrap_content"-->
+                    <!--                                android:layout_height="wrap_content"-->
+                    <!--                                android:layout_gravity="bottom"-->
+                    <!--                                android:layout_marginStart="@dimen/_5sdp"-->
+                    <!--                                android:layout_marginBottom="@dimen/_5sdp"-->
+                    <!--                                android:src="@drawable/ic_download" />-->
+                    <!--                        </LinearLayout>-->
 
-<!--                    </LinearLayout>-->
+                    <!--                    </LinearLayout>-->
 
                     <TextView
                         android:id="@+id/tvError"
