--- a/app/src/main/res/layout/activity_business_profile.xml
+++ b/app/src/main/res/layout/activity_business_profile.xml
@@ -128,7 +128,6 @@
                             android:id="@+id/linearLayout"
                             android:layout_width="@dimen/_50sdp"
                             android:layout_height="@dimen/_50sdp"
-                            android:background="@drawable/corecircle"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -136,11 +135,12 @@
 
                             <androidx.cardview.widget.CardView
                                 android:id="@+id/business_userProfileCV"
-                                android:layout_width="@dimen/_48sdp"
-                                android:layout_height="@dimen/_48sdp"
+                                android:layout_width="@dimen/_46sdp"
+                                android:layout_height="@dimen/_46sdp"
                                 android:layout_alignParentRight="true"
                                 android:layout_gravity="center"
-                                app:cardCornerRadius="@dimen/_24sdp"
+                                app:cardCornerRadius="@dimen/_23sdp"
+                                android:elevation="0dp"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
@@ -156,12 +156,13 @@
 
                                 <TextView
                                     android:id="@+id/b_imageTextTV"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:gravity="center"
                                     android:fontFamily="@font/opensans_bold"
                                     android:text="AO"
-                                    android:textColor="@color/primary_black"
+                                    android:background="@color/primary_green"
+                                    android:textColor="@color/white"
                                     android:textSize="@dimen/_18ssp"
                                     android:visibility="gone" />
 
